antlr/.antlr/GraspParser.java
// Generated from /Users/yonatanberner/mygit/GraspLanguage/antlr/Grasp.g4 by ANTLR 4.9.2

    package antlr4;
    // import java.util.HashMap;
    // import edu.yu.compilers.intermediate.symtable.SymTableEntry;
    // import edu.yu.compilers.intermediate.type.Typespec;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraspParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, PROGRAM=21, CONST=22, TYPE=23, ARRAY=24, 
		OF=25, RECORD=26, VAR=27, BEGIN=28, END=29, DIV=30, MOD=31, AND=32, OR=33, 
		NOT=34, IF=35, THEN=36, ELSE=37, CASE=38, REPEAT=39, UNTIL=40, WHILE=41, 
		DO=42, FOR=43, TO=44, DOWNTO=45, WRITE=46, WRITELN=47, READ=48, READLN=49, 
		PROCEDURE=50, FUNCTION=51, IDENTIFIER=52, INTEGER=53, REAL=54, NEWLINE=55, 
		WS=56, QUOTE=57, CHARACTER=58, STRING=59, COMMENT=60;
	public static final int
		RULE_program = 0, RULE_programHeader = 1, RULE_programParameters = 2, 
		RULE_programIdentifier = 3, RULE_block = 4, RULE_declarations = 5, RULE_constantsPart = 6, 
		RULE_constantDefinitionsList = 7, RULE_constantDefinition = 8, RULE_constantIdentifier = 9, 
		RULE_constant = 10, RULE_sign = 11, RULE_typesPart = 12, RULE_typeDefinitionsList = 13, 
		RULE_typeDefinition = 14, RULE_typeIdentifier = 15, RULE_typeSpecification = 16, 
		RULE_simpleType = 17, RULE_enumerationType = 18, RULE_enumerationConstant = 19, 
		RULE_subrangeType = 20, RULE_arrayType = 21, RULE_arrayDimensionList = 22, 
		RULE_recordType = 23, RULE_recordFields = 24, RULE_variablesPart = 25, 
		RULE_variableDeclarationsList = 26, RULE_variableDeclarations = 27, RULE_variableIdentifierList = 28, 
		RULE_variableIdentifier = 29, RULE_routinesPart = 30, RULE_routineDefinition = 31, 
		RULE_procedureHead = 32, RULE_functionHead = 33, RULE_routineIdentifier = 34, 
		RULE_parameters = 35, RULE_parameterDeclarationsList = 36, RULE_parameterDeclarations = 37, 
		RULE_parameterIdentifierList = 38, RULE_parameterIdentifier = 39, RULE_statement = 40, 
		RULE_compoundStatement = 41, RULE_emptyStatement = 42, RULE_statementList = 43, 
		RULE_assignmentStatement = 44, RULE_lhs = 45, RULE_rhs = 46, RULE_ifStatement = 47, 
		RULE_trueStatement = 48, RULE_falseStatement = 49, RULE_caseStatement = 50, 
		RULE_caseBranchList = 51, RULE_caseBranch = 52, RULE_caseConstantList = 53, 
		RULE_caseConstant = 54, RULE_repeatStatement = 55, RULE_whileStatement = 56, 
		RULE_forStatement = 57, RULE_procedureCallStatement = 58, RULE_procedureName = 59, 
		RULE_argumentList = 60, RULE_argument = 61, RULE_writeStatement = 62, 
		RULE_writelnStatement = 63, RULE_writeArguments = 64, RULE_writeArgument = 65, 
		RULE_fieldWidth = 66, RULE_decimalPlaces = 67, RULE_readStatement = 68, 
		RULE_readlnStatement = 69, RULE_readArguments = 70, RULE_expression = 71, 
		RULE_simpleExpression = 72, RULE_term = 73, RULE_factor = 74, RULE_variable = 75, 
		RULE_modifier = 76, RULE_indexList = 77, RULE_index = 78, RULE_field = 79, 
		RULE_functionCall = 80, RULE_functionName = 81, RULE_number = 82, RULE_unsignedNumber = 83, 
		RULE_integerConstant = 84, RULE_realConstant = 85, RULE_characterConstant = 86, 
		RULE_stringConstant = 87, RULE_relOp = 88, RULE_addOp = 89, RULE_mulOp = 90;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeader", "programParameters", "programIdentifier", 
			"block", "declarations", "constantsPart", "constantDefinitionsList", 
			"constantDefinition", "constantIdentifier", "constant", "sign", "typesPart", 
			"typeDefinitionsList", "typeDefinition", "typeIdentifier", "typeSpecification", 
			"simpleType", "enumerationType", "enumerationConstant", "subrangeType", 
			"arrayType", "arrayDimensionList", "recordType", "recordFields", "variablesPart", 
			"variableDeclarationsList", "variableDeclarations", "variableIdentifierList", 
			"variableIdentifier", "routinesPart", "routineDefinition", "procedureHead", 
			"functionHead", "routineIdentifier", "parameters", "parameterDeclarationsList", 
			"parameterDeclarations", "parameterIdentifierList", "parameterIdentifier", 
			"statement", "compoundStatement", "emptyStatement", "statementList", 
			"assignmentStatement", "lhs", "rhs", "ifStatement", "trueStatement", 
			"falseStatement", "caseStatement", "caseBranchList", "caseBranch", "caseConstantList", 
			"caseConstant", "repeatStatement", "whileStatement", "forStatement", 
			"procedureCallStatement", "procedureName", "argumentList", "argument", 
			"writeStatement", "writelnStatement", "writeArguments", "writeArgument", 
			"fieldWidth", "decimalPlaces", "readStatement", "readlnStatement", "readArguments", 
			"expression", "simpleExpression", "term", "factor", "variable", "modifier", 
			"indexList", "index", "field", "functionCall", "functionName", "number", 
			"unsignedNumber", "integerConstant", "realConstant", "characterConstant", 
			"stringConstant", "relOp", "addOp", "mulOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "';'", "'('", "','", "')'", "'='", "'-'", "'+'", "'..'", 
			"'['", "']'", "':'", "':='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'*'", 
			"'/'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'''"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "PROGRAM", "CONST", 
			"TYPE", "ARRAY", "OF", "RECORD", "VAR", "BEGIN", "END", "DIV", "MOD", 
			"AND", "OR", "NOT", "IF", "THEN", "ELSE", "CASE", "REPEAT", "UNTIL", 
			"WHILE", "DO", "FOR", "TO", "DOWNTO", "WRITE", "WRITELN", "READ", "READLN", 
			"PROCEDURE", "FUNCTION", "IDENTIFIER", "INTEGER", "REAL", "NEWLINE", 
			"WS", "QUOTE", "CHARACTER", "STRING", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grasp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraspParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeaderContext programHeader() {
			return getRuleContext(ProgramHeaderContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			programHeader();
			setState(183);
			block();
			setState(184);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeaderContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(GraspParser.PROGRAM, 0); }
		public ProgramIdentifierContext programIdentifier() {
			return getRuleContext(ProgramIdentifierContext.class,0);
		}
		public ProgramParametersContext programParameters() {
			return getRuleContext(ProgramParametersContext.class,0);
		}
		public ProgramHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeader; }
	}

	public final ProgramHeaderContext programHeader() throws RecognitionException {
		ProgramHeaderContext _localctx = new ProgramHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(PROGRAM);
			setState(187);
			programIdentifier();
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(188);
				programParameters();
				}
			}

			setState(191);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramParametersContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(GraspParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(GraspParser.IDENTIFIER, i);
		}
		public ProgramParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programParameters; }
	}

	public final ProgramParametersContext programParameters() throws RecognitionException {
		ProgramParametersContext _localctx = new ProgramParametersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programParameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(T__2);
			setState(194);
			match(IDENTIFIER);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(195);
				match(T__3);
				setState(196);
				match(IDENTIFIER);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(202);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramIdentifierContext extends ParserRuleContext {
		public SymTableEntry entry = null;
		public TerminalNode IDENTIFIER() { return getToken(GraspParser.IDENTIFIER, 0); }
		public ProgramIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programIdentifier; }
	}

	public final ProgramIdentifierContext programIdentifier() throws RecognitionException {
		ProgramIdentifierContext _localctx = new ProgramIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_programIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			declarations();
			setState(207);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public ConstantsPartContext constantsPart() {
			return getRuleContext(ConstantsPartContext.class,0);
		}
		public TypesPartContext typesPart() {
			return getRuleContext(TypesPartContext.class,0);
		}
		public VariablesPartContext variablesPart() {
			return getRuleContext(VariablesPartContext.class,0);
		}
		public RoutinesPartContext routinesPart() {
			return getRuleContext(RoutinesPartContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(209);
				constantsPart();
				setState(210);
				match(T__1);
				}
			}

			setState(217);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(214);
				typesPart();
				setState(215);
				match(T__1);
				}
			}

			setState(222);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(219);
				variablesPart();
				setState(220);
				match(T__1);
				}
			}

			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROCEDURE || _la==FUNCTION) {
				{
				setState(224);
				routinesPart();
				setState(225);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantsPartContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(GraspParser.CONST, 0); }
		public ConstantDefinitionsListContext constantDefinitionsList() {
			return getRuleContext(ConstantDefinitionsListContext.class,0);
		}
		public ConstantsPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantsPart; }
	}

	public final ConstantsPartContext constantsPart() throws RecognitionException {
		ConstantsPartContext _localctx = new ConstantsPartContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constantsPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			match(CONST);
			setState(230);
			constantDefinitionsList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionsListContext extends ParserRuleContext {
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public ConstantDefinitionsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinitionsList; }
	}

	public final ConstantDefinitionsListContext constantDefinitionsList() throws RecognitionException {
		ConstantDefinitionsListContext _localctx = new ConstantDefinitionsListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constantDefinitionsList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(232);
			constantDefinition();
			setState(237);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(233);
					match(T__1);
					setState(234);
					constantDefinition();
					}
					} 
				}
				setState(239);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public ConstantIdentifierContext constantIdentifier() {
			return getRuleContext(ConstantIdentifierContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
	}

	public final ConstantDefinitionContext constantDefinition() throws RecognitionException {
		ConstantDefinitionContext _localctx = new ConstantDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constantDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(240);
			constantIdentifier();
			setState(241);
			match(T__5);
			setState(242);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantIdentifierContext extends ParserRuleContext {
		public Typespec type = null;
		public SymTableEntry entry = null;
		public TerminalNode IDENTIFIER() { return getToken(GraspParser.IDENTIFIER, 0); }
		public ConstantIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantIdentifier; }
	}

	public final ConstantIdentifierContext constantIdentifier() throws RecognitionException {
		ConstantIdentifierContext _localctx = new ConstantIdentifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_constantIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(244);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public Typespec type = null;
		public Object value = null;
		public TerminalNode IDENTIFIER() { return getToken(GraspParser.IDENTIFIER, 0); }
		public UnsignedNumberContext unsignedNumber() {
			return getRuleContext(UnsignedNumberContext.class,0);
		}
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public CharacterConstantContext characterConstant() {
			return getRuleContext(CharacterConstantContext.class,0);
		}
		public StringConstantContext stringConstant() {
			return getRuleContext(StringConstantContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constant);
		int _la;
		try {
			setState(255);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
			case IDENTIFIER:
			case INTEGER:
			case REAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(247);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6 || _la==T__7) {
					{
					setState(246);
					sign();
					}
				}

				setState(251);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(249);
					match(IDENTIFIER);
					}
					break;
				case INTEGER:
				case REAL:
					{
					setState(250);
					unsignedNumber();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case CHARACTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(253);
				characterConstant();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(254);
				stringConstant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(257);
			_la = _input.LA(1);
			if ( !(_la==T__6 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
